kubernetes/result/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: h0x3ein/rresult:2e16ed1
        resources:
          requests:
            cpu: "100m"        
            memory: "64Mi"   
          limits:
            cpu: "200m"       
            memory: "128Mi"
