kubernetes/result/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: vote-app
spec:
  type: NodePort
  selector:
    app: result
  ports:
  - name: result-port
    targetPort: 3000
    port: 3000
