kubernetes/result/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
spec:
  rules:
  - host: result.armin.hs
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result
            port: 
              number: 3000
