kubernetes/result/result-egress-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: result-egress-mysql
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: result
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: db
    ports:
      - protocol: TCP
        port: 3306
